parent and child POM refactoring done